--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "maatwebsite/excel": "~2.1.0",
     "zgldh/qiniu-laravel-storage": "^0.4.2",
     "simplesoftwareio/simple-qrcode": "1.3.*",
-    "curl/curl": "^1.3"
+    "curl/curl": "^1.3",
+    "vinelab/http": "dev-master"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
